add location
